Updated index file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is my site</h1>
+    <h1>This Is My First Site</h1>
     <p>this is another line on my site</p>
 </body>
 </html>
